--- a/Stylesheets/cff.css
+++ b/Stylesheets/cff.css
@@ -51,7 +51,7 @@ th, td {
 }
 
 
-/*CSS styles Added By Jerrin*/
+/*CSS styles Added By Jerrin Eldo Mazhuvancherry P*/
 
 .main-loginpage {
     max-width: 1200px;
@@ -130,7 +130,7 @@ hr {
     color: white;
 }
 
-/*CSS styles Added By Jerrin*/
+/*CSS styles Added By Jerrin Eldo Mazhuvancherry P*/
 
 
 /*==============4.FOOTER=================*/
