--- a/Stylesheets/frg_page.css
+++ b/Stylesheets/frg_page.css
@@ -1,7 +1,3 @@
-/*CSS styles Added By Praveen*/
-.default{
-    color: #fff;
-}
 
 tr:nth-child(odd) td{
     background-color: #333333;
@@ -9,4 +5,8 @@ tr:nth-child(odd) td{
 
 tr:nth-child(even) td{
     background-color: #222222;
+}
+
+th, td{
+    color: #fff;
 }
