--- a/Stylesheets/cff.css
+++ b/Stylesheets/cff.css
@@ -32,6 +32,10 @@ body{
 #rosterTitle {
     color: #9d9d9d;
 }
+#homeReports{
+    background-color: #fff;
+    color: black;
+}
 
 /*==============4.FOOTER=================*/
 .footer {
