--- a/Stylesheets/login.css
+++ b/Stylesheets/login.css
@@ -22,7 +22,7 @@
   .main-loginpage {
       max-width: 1200px;
       margin: 0 auto;
-      background-image: url(../Images/Background.jpg);
+      background-image: url(../Images/background.jpg);
       background-size: cover;
   }
   
